--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -24,7 +24,7 @@
           - if user_signed_in?
             %li(class="dropdown")
               %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
-                = owner_image(current_user, 20, false)
+                = owner_image(current_user, size: 20, show_tooltip: false)
                 = current_user.nickname
                 %b(class="caret")
               %ul(class="dropdown-menu")
