--- a/app/views/search/_results_scrapers.html.haml
+++ b/app/views/search/_results_scrapers.html.haml
@@ -11,6 +11,6 @@
       .alert.alert-info
         = no_search_results_message("scrapers <em>with data,</em> that are".html_safe, @q)
     - else
-      - @scrapers.with_details.each do |scraper, details|
-        = render scraper, highlight: details[:highlight]
+      - @scrapers.with_highlights.each do |scraper, highlights|
+        = render scraper, highlight: highlights
       = paginate @scrapers
